--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Roniel Rivera</title>
+</head>
+<body>
+    <header>
+        <article>
+            <h1>This page is about Me!</h1>
+        </article>
+    </header>
+    <main>
+        <!--Paragraph 1-->
+        <p>Hi, welcome to my domain! My name is Roniel Rivera, and I'm from the Philippines. I moved to Canada in 2015 and currently reside in Orleans, Ottawa. I like to do anything related to videos and photos, whether it's <abbr title="Motion Graphics">MoGraph</abbr> or graphics designing. I like to play video games that are challenging while having fun at the same time.
+        </p>
+        <!--Paragraph 2-->
+        <p>As for my passion for video editing or motion graphic animation, I have encountered many problems as I go. Failing a course or program is one of them. I was thinking of giving up and choose for a different program, but as I was thinking about it, a post from a friend of mine who likes Star Wars showed me a photo stating, <strong><em>"The greatest teacher, failure is." - Master Yoda.</em></strong> Since then, I have accepted my failures as a lesson to myself.
+        </p>
+    </main>
+    <footer>
+        <!--&#169 is the copyright symbol-->
+        Webpage footer 2022&#169
+    </footer>
+    
+</body>
+</html>
