--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -18,8 +18,8 @@
         </p>
     </main>
     <footer>
-        <!--&#169 is the copyright symbol-->
-        Webpage footer 2022&#169
+        <!--&copy has been changed from-->
+        Webpage footer 2022&copy
     </footer>
     
 </body>
