--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -42,7 +42,7 @@
         <cite></cite>
     </main>
     <footer>
-        <!--&copy has been changed from-->
+        <!--&copy has been changed-->
         Webpage footer 2022&copy
     </footer>
     
