--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,7 +7,13 @@
     <header>
         <h1>Roniel Rivera</h1>
     </header>
+    <section>
+        <!--I thought it would be funny if I add (#128571;) cat emoji-->
+        <h2>This is my cat Fern &#128571;</h2>
+        <img src="images/fern.jpg" alt="profile" width="412" height="743">
+    </section>
     <main>
+        <!--Did some changes from rubric feedback and made it look nice. hoping to fix it once we get to CSS I don't want to get ahead of everyone so I did't use it-->
         <!--Paragraph 1-->
         <p>
             Hi, welcome to my domain! My name is Roniel Rivera, and I'm from the <strong>Philippines.</strong>
@@ -39,7 +45,6 @@
         <p>
             Since then, I have accepted my failures as a lesson to myself.
         </p>
-        <cite></cite>
     </main>
     <footer>
         <!--&copy has been changed-->
