--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,6 +4,35 @@
     <title>Notes</title>
 </head>
 <body>
-  
+    <!--Navigation-->
+    <section>
+        <h1>Notes Page</H1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="notes.html">Notes</a></li>
+        </ul>
+    </section>
+    <!--Description List-->
+    <main>
+    <div>
+        <h3>Tags I learned in HTML</h3>
+        <dl>
+            <dt></dt>
+            <dd></dd>
+
+            <dt></dt>
+            <dd></dd>
+
+            <dt></dt>
+            <dd></dd>
+
+            <dt></dt>
+            <dd></dd>
+
+            <dt></dt>
+            <dd></dd>
+        </dl>
+    </div>
+    </main>
 </body>
 </html>
