--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,6 +6,10 @@
 <body>
     <header>
         <h1>Roniel Rivera</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="notes.html">Notes</a></li>
+        </ul>
     </header>
     <section>
         <!--I thought it would be funny if I add (#128571;) cat emoji-->
@@ -15,6 +19,7 @@
     <main>
         <!--Did some changes from rubric feedback and made it look nice. hoping to fix it once we get to CSS I don't want to get ahead of everyone so I did't use it-->
         <!--Paragraph 1-->
+        <H1>Introduction!</H1>
         <p>
             Hi, welcome to my domain! My name is Roniel Rivera, and I'm from the <strong>Philippines.</strong>
         </p>
@@ -45,6 +50,7 @@
         <p>
             Since then, I have accepted my failures as a lesson to myself.
         </p>
+        <h1>List of Hobbies</h1>
     </main>
     <footer>
         <!--&copy has been changed-->
