--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -17,20 +17,21 @@
     <div>
         <h3>Tags I learned in HTML</h3>
         <dl>
-            <dt></dt>
-            <dd></dd>
-
-            <dt></dt>
-            <dd></dd>
-
-            <dt></dt>
-            <dd></dd>
-
-            <dt></dt>
-            <dd></dd>
-
-            <dt></dt>
-            <dd></dd>
+            <dt><strong>Table Tag</strong></dt>
+            <dd>The table tag creates a table in HTML</dd>
+                <br>
+            <dt><strong>Section Tag</strong></dt>
+            <dd>Section tag is a section of documents like header and footer. It's a grouped tag.</dd>
+                <br>
+            <dt><strong>Blockquote Tag</strong></dt>
+            <dd>The blockquote tag is used when it specified a sentence as a quote.</dd>
+                <br>    
+            <dt><strong>Cite Tag</strong></dt>
+            <dd>Citation tag or cite is used to source quotations of a person words.</dd>
+                <br>
+            <dt><strong>Article Tag</strong></dt>
+            <dd>The article tag is used to make an independent content</dd>
+            
         </dl>
     </div>
     </main>
