changes that I dont know why it didnt register

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -51,6 +51,11 @@
             Since then, I have accepted my failures as a lesson to myself.
         </p>
         <h1>List of Hobbies</h1>
+            <li>Watch Documentaries</li>
+        <!--I don't know why but for some reason I really enjoy hours and hours of long documentaries-->
+            <li>Playing Video Games</li>
+        <!--I live video games but I found myself not playing much than before-->
+        <br>
     </main>
     <footer>
         <!--&copy has been changed-->
