--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -2,36 +2,32 @@
 <html lang="en">
 <head>
     <title>Notes</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!--Navigation-->
-    <section>
-        <h1>Notes Page</H1>
-        <ul>
+    <header>
+        <ul class="navigation-bar">
             <li><a href="index.html">Home</a></li>
             <li><a href="notes.html">Notes</a></li>
         </ul>
-    </section>
+        <h1>Notes Page</H1>
+    </header>
     <!--Description List-->
     <main>
     <div>
-        <h3>Tags I learned in HTML</h3>
+        <h2>Tags I learned in HTML</h2>
         <dl>
             <dt><strong>Table Tag</strong></dt>
             <dd>The table tag creates a table in HTML</dd>
-                <br>
             <dt><strong>Section Tag</strong></dt>
             <dd>Section tag is a section of documents like header and footer. It's a grouped tag.</dd>
-                <br>
             <dt><strong>Blockquote Tag</strong></dt>
             <dd>The blockquote tag is used when it specified a sentence as a quote.</dd>
-                <br>    
             <dt><strong>Cite Tag</strong></dt>
             <dd>Citation tag or cite is used to source quotations of a person words.</dd>
-                <br>
             <dt><strong>Article Tag</strong></dt>
             <dd>The article tag is used to make an independent content</dd>
-            
         </dl>
     </div>
     </main>
