--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -11,11 +11,11 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="notes.html">Notes</a></li>
         </ul>
-        <h1>Notes Page</H1>
+        <h1 class="site-title">Notes Page</H1>
     </header>
     <!--Description List-->
     <main>
-    <div>
+    <div class="notes-table">
         <h2>Tags I learned in HTML</h2>
         <dl>
             <dt><strong>Table Tag</strong></dt>
@@ -31,5 +31,8 @@
         </dl>
     </div>
     </main>
+    <footer>
+        <p>Footer 2022&copy;</p>
+    </footer>
 </body>
 </html>
