just fun changes

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -32,7 +32,7 @@
     </div>
     </main>
     <footer>
-        <p>Footer 2022&copy;</p>
+        <p>W3 School Rocks! 2022&copy;</p>
     </footer>
 </body>
 </html>
