--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -64,7 +64,7 @@
     </main>
     <footer>
         <!--&copy has been changed-->
-        <p>Footer 2022&copy;</p>
+        <p>W3 School Rocks! 2022&copy;</p>
     </footer>
     
 </body>
