--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -15,9 +15,10 @@
         
     <main>
         <!--I thought it would be funny if I add (#128571;) cat emoji-->
+        <div class="profile">
             <h2>This is my cat Fern &#128571;</h2>
             <img src="images/fern.jpg" alt="profile" class="my-image">
-        <!--Did some changes from rubric feedback and made it look nice. hoping to fix it once we get to CSS I don't want to get ahead of everyone so I did't use it-->
+        </div>
          <!--Paragraph 1-->
          <div class="pharagraph-top">
             <H1>Introduction!</H1>
