--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Wrapper-->
+    <div id="wrapper">
+    <!--Title-->
+        <div class="headerTitle">Lone Starfish</div>
+    <!--Banner Image-->
+        <div class="bannerImage"></div>
+    <!--Navigation Bar-->
+        <div class="navbar">
+            <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#story">STORY</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </div>
+    <!--Article Content-->
+    <main>
+    <!--Profile-->
+        <h2>Life of a Starfish</h2>
+        <div class="profile"></div>
+    <!--Article-->
+        <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
+    <!--Starfish Facts-->
+        <div class="facts">
+            <h2>Facts About Starfish</h2>
+            <ul>
+                <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+            </ul>
+        </div>
+    </main>
+    <!--Contacts-->
+    <section>
+        <h2>Contact to learn more</h2>
+        <div class="contacts"></div>
+    </section>
+    <!--Footer-->
+    <footer>&copy; Lone Starfish.</footer>
+    </div>
 </body>
 </html>
