--- a/midterm/index.html
+++ b/midterm/index.html
@@ -29,7 +29,9 @@
         <div class="profile"></div>
     <!--Article-->
         <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
+    </main>
     <!--Starfish Facts-->
+    <section>
         <div class="facts">
             <h2>Facts About Starfish</h2>
             <ul>
@@ -39,11 +41,39 @@
                 <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
             </ul>
         </div>
-    </main>
+    </section>
     <!--Contacts-->
     <section>
         <h2>Contact to learn more</h2>
-        <div class="contacts"></div>
+    <!--Contact box-->
+        <div class="contacts">
+            <form action="index.html" method="get">
+            <!--Your Name-->
+                <label for="fullname"><h3>Your Name</h3></label>
+                <input id="fullname">
+            <!--Your Email-->
+                <label for="email"><h3>Your Email</h3></label>
+                <input id="email">
+            <!--Your Message-->
+                <label for="message"><h3>Message</h3></label>
+                <input id="message">
+            </form>
+        </div>
+        <div>
+            <h2>Would you like to visit the starfish?</h2>
+            <!--Yes-->
+            <label for="yes">Yes</label>
+            <input type="checkbox" id="yes" name="yes">
+            <!--No-->
+            <label for="no">No</label>
+            <input type="checkbox" id="no" name="no">
+            <!--Maybe-->
+            <label for="maybe">Maybe</label>
+            <input type="checkbox" id="maybe" name="maybe">
+        </div>
+        <div>
+            <button>SEND</button>
+        </div>
     </section>
     <!--Footer-->
     <footer>&copy; Lone Starfish.</footer>
