--- a/midterm/index.html
+++ b/midterm/index.html
@@ -20,11 +20,13 @@
         </div>
         <!--Navigation Bar-->
         <div>
-             <ul class="navlist">
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#story">STORY</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#story">STORY</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </nav>
         </div>
     <!--Article Content-->
     <main>
@@ -66,7 +68,7 @@
                     <!--Your Message-->
                     <div class="formMessage">
                         <label for="message">Message</label>
-                        <textarea id="message" cols="80" rows="10"></textarea>
+                        <textarea id="message" cols="50" rows="10"></textarea>
                     </div>
                 </form>
             </div>
