--- a/midterm/index.html
+++ b/midterm/index.html
@@ -91,7 +91,7 @@
                 <input type="radio" id="maybe" name="maybe">
             </div>
             <!--Send Button-->
-            <div>
+            <div class="sendButton">
                 <button class="button">SEND</button>
             </div>
         </div>
