--- a/midterm/index.html
+++ b/midterm/index.html
@@ -74,12 +74,12 @@
                     <!--Your Message-->
                     <div class="formMessage">
                         <label for="message">Message</label>
-                        <textarea id="message" cols="50" rows="10"></textarea>
+                        <textarea id="message" rows="8"></textarea>
                     </div>
                 </form>
             </div>
             <div>
-                <h2>Would you like to visit the starfish?</h2>
+                <h3>Would you like to visit the starfish?</h3>
                 <!--Yes-->
                 <label for="yes">Yes</label>
                 <input type="radio" id="yes" name="yes">
