placeholder added for forms

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -63,12 +63,12 @@
                 <form action="index.html" method="get">
                     <div class="formName">
                     <!--Your Name-->
-                        <label for="fullname">Your Name</label>
+                        <label for="fullname" placeholder="Your Name...">Your Name</label>
                         <input id="fullname">
                     </div>
                     <div class="formEmail">
                     <!--Your Email-->
-                        <label for="email">Your Email</label>
+                        <label for="email" placeholder="Email...">Your Email</label>
                         <input id="email">
                     </div>
                     <!--Your Message-->
