--- a/midterm/index.html
+++ b/midterm/index.html
@@ -63,13 +63,13 @@
                 <form action="index.html" method="get">
                     <div class="formName">
                     <!--Your Name-->
-                        <label for="fullname" placeholder="Your Name...">Your Name</label>
-                        <input id="fullname">
+                        <label for="fullname">Your Name</label>
+                        <input id="fullname" placeholder="Your Name...">
                     </div>
                     <div class="formEmail">
                     <!--Your Email-->
-                        <label for="email" placeholder="Email...">Your Email</label>
-                        <input id="email">
+                        <label for="email">Your Email</label>
+                        <input id="email" placeholder="Email...">
                     </div>
                     <!--Your Message-->
                     <div class="formMessage">
