--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
+    <link rel="stylesheet" href="/final-project/css/main.css">
+    <link rel="stylesheet" href="/final-project/css/font.css">
 </head>
 <body>
-    
+    <!-- Navigation Bar-->
+    <nav>
+        <img src="images/images/logo.png" alt="logo">
+        <ul>
+            <li>
+                <a href="#Home">Home</a>
+            </li>
+            <li>
+                <a href="#About Us">About Us</a>
+            </li>
+            <li>
+                <a href="#Services">Services</a>
+            </li>
+            <li>
+                <a href="#Team">Team</a>
+            </li>
+            <li>
+                <a href="#Contact">Contact</a>
+            </li>
+        </ul>
+        <div class="search-bar">
+            <form action="#">
+                <input type="text" placeholder="Search" name="search">
+                <button type="submit"><span class="material-icons-outlined">search</span></button>
+            </form>
+        </div>
+    </nav>
+    <main>
+
+    </main>
+    <section>
+
+    </section>
 </body>
 </html>
