navbar semi complete

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,33 +7,34 @@
     <title>Final Project</title>
     <link rel="stylesheet" href="/final-project/css/main.css">
     <link rel="stylesheet" href="/final-project/css/font.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <!-- Navigation Bar-->
     <nav>
-        <img src="images/images/logo.png" alt="logo">
-        <ul>
-            <li>
+        <div class="navbar">
+            <img src="images/images/logo.png" alt="logo">
+            <div>
                 <a href="#Home">Home</a>
-            </li>
-            <li>
+            </div>
+            <div>
                 <a href="#About Us">About Us</a>
-            </li>
-            <li>
+            </div>
+            <div>
                 <a href="#Services">Services</a>
-            </li>
-            <li>
+            </div>
+            <div>
                 <a href="#Team">Team</a>
-            </li>
-            <li>
+            </div>
+            <div>
                 <a href="#Contact">Contact</a>
-            </li>
-        </ul>
-        <div class="search-bar">
-            <form action="#">
-                <input type="text" placeholder="Search" name="search">
-                <button type="submit"><span class="material-icons-outlined">search</span></button>
-            </form>
+            </div>
+            <div class="search-bar">
+                <form action="#">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit">Search</button>
+                </form>
+            </div>
         </div>
     </nav>
     <main>
