--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,28 +7,21 @@
     <title>Final Project</title>
     <link rel="stylesheet" href="/final-project/css/main.css">
     <link rel="stylesheet" href="/final-project/css/font.css">
+    <link rel="stylesheet" href="/final-project/css/mobile.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <!-- Navigation Bar-->
     <nav>
         <div class="navbar">
-            <img src="images/images/logo.png" alt="logo">
-            <div>
+            <div class="navLogo">
+                <img src="images/images/logo.png" alt="logo">
+            </div>
                 <a href="#Home">Home</a>
-            </div>
-            <div>
                 <a href="#About Us">About Us</a>
-            </div>
-            <div>
                 <a href="#Services">Services</a>
-            </div>
-            <div>
                 <a href="#Team">Team</a>
-            </div>
-            <div>
                 <a href="#Contact">Contact</a>
-            </div>
             <div class="search-bar">
                 <form action="#">
                     <input type="text" placeholder="Search" name="search">
