--- a/final-project/index.html
+++ b/final-project/index.html
@@ -17,7 +17,7 @@
                 <img src="images/images/logo.png" alt="logo">
             </div>
                 <a href="#Home">Home</a>
-                <a href="#About Us">About Us</a>
+                <a href="#About-Us">About Us</a>
                 <a href="#Services">Services</a>
                 <a href="#Team">Team</a>
                 <a href="#Contact">Contact</a>
@@ -32,8 +32,5 @@
     <main>
 
     </main>
-    <section>
-
-    </section>
 </body>
 </html>
