--- a/final-project/index.html
+++ b/final-project/index.html
@@ -10,6 +10,7 @@
        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
+    <div class="wrapper">
     <!-- Navigation Bar-->
     <nav>
         <div class="navbar">
@@ -27,8 +28,34 @@
             </form>
         </div>
     </nav>
-    <main>
+    </div>
+    <section class="about-us">
+        <div class="wrapper">
 
+        </div>
+    </section>
+    <!-- Services Content -->
+    <main class="services">
+        <div class="wrapper"></div>
     </main>
+    <!-- Our Vision Section -->
+    <section class="our-vision">
+        <div class="wrapper"></div>
+    </section>
+    <!-- Our Team Section -->
+    <section>
+        <div class="wrapper"></div>
+    </section>
+    <!-- Contact Us -->
+    <section>
+        <div class="wrapper"></div>
+    </section>
+    <!-- Footer -->
+    <Footer>
+        <div class="wrapper">
+            <p>Copyright Three Start Media, 2020</p>
+            <p>All Images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
+        </div>
+    </Footer>
 </body>
 </html>
