--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project</title>
+    <title>MTM6130 Final Project - Roniel Rivera</title>
     <link rel="stylesheet" href="/final-project/css/main.css">
-    <link rel="stylesheet" href="/final-project/css/font.css">
-       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <div class="wrapper">
@@ -22,6 +20,7 @@
                 <a href="#Services">Services</a>
                 <a href="#Team">Team</a>
                 <a href="#Contact">Contact</a>
+            <!-- Search Bar -->
             <form action="#">
                 <input type="text" placeholder="Search" name="search">
                 <button type="submit">Search</button>
@@ -31,7 +30,7 @@
     </div>
     <section class="about-us">
         <div class="wrapper">
-
+            
         </div>
     </section>
     <!-- Services Content -->
