navbar fixed and added search icon

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/d68799586b.js" crossorigin="anonymous"></script>
     <title>MTM6130 Final Project - Roniel Rivera</title>
-    <link rel="stylesheet" href="/final-project/css/main.css">
+    <!-- <link rel="stylesheet" href="/final-project/css/main.css"> -->
 </head>
 <body>
     <div class="wrapper">
@@ -15,15 +16,17 @@
             <div class="navLogo">
                 <img src="images/images/logo.png" alt="logo">
             </div>
-                <a href="#Home">Home</a>
-                <a href="#About-Us">About Us</a>
-                <a href="#Services">Services</a>
-                <a href="#Team">Team</a>
-                <a href="#Contact">Contact</a>
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About-us">About Us</a></li>
+                <li><a href="#Services">Services</a></li>
+                <li><a href="#Team">Team</a></li>
+                <li><a href="#Contact">Contact</a></li>
+            </ul>
             <!-- Search Bar -->
             <form action="#">
                 <input type="text" placeholder="Search" name="search">
-                <button type="submit">Search</button>
+                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
     </nav>
