fixed proper structure

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -9,55 +9,89 @@
     <!-- <link rel="stylesheet" href="/final-project/css/main.css"> -->
 </head>
 <body>
+    <!-- Header -->
+    <header class="site-header">
     <div class="wrapper">
     <!-- Navigation Bar-->
     <nav>
-        <div class="navbar">
-            <div class="navLogo">
-                <img src="images/images/logo.png" alt="logo">
-            </div>
-            <ul>
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About-us">About Us</a></li>
-                <li><a href="#Services">Services</a></li>
-                <li><a href="#Team">Team</a></li>
-                <li><a href="#Contact">Contact</a></li>
-            </ul>
-            <!-- Search Bar -->
-            <form action="#">
-                <input type="text" placeholder="Search" name="search">
-                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </form>
+        <div class="navLogo">
+            <img src="images/images/logo.png" alt="logo">
         </div>
+        <!-- Navbar Pages -->
+        <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#About-us">About Us</a></li>
+            <li><a href="#Services">Services</a></li>
+            <li><a href="#Team">Team</a></li>
+            <li><a href="#Contact">Contact</a></li>
+        </ul>
+        <!-- Other Nav Options -->
+        <!-- 
+        <div class="nav-pages">
+            <div class="home">
+                <a href="#Home">Home</a>
+            </div>
+            <div class="about-us">
+                <a href="#About-us">About Us</a>
+            </div>
+            <div class="services">
+                <a href="#Services">Services</a>
+            </div>
+            <div class="team">
+                <a href="#Team">Team</a>
+            </div>
+            <div class="contact">
+                <a href="#Contact">Contact</a>
+            </div>
+        </div> 
+        -->
+        <!-- Search Bar -->
+        <form action="#">
+             <input type="text" placeholder="Search" name="search">
+             <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
     </nav>
     </div>
+    </header>
+    <main>
+     <!--Header End  -->
     <section class="about-us">
         <div class="wrapper">
-            
+            <h1>About Us</h1>
         </div>
     </section>
     <!-- Services Content -->
-    <main class="services">
-        <div class="wrapper"></div>
-    </main>
+    <section class="services">
+        <div class="wrapper">
+            <h1>Services</h1>
+        </div>
+    </section>
     <!-- Our Vision Section -->
     <section class="our-vision">
-        <div class="wrapper"></div>
+        <div class="wrapper">
+            <h2>Our Vision</h2>
+        </div>
     </section>
     <!-- Our Team Section -->
     <section>
-        <div class="wrapper"></div>
+        <div class="wrapper">
+            <h1>Our Team</h1>
+        </div>
     </section>
     <!-- Contact Us -->
     <section>
-        <div class="wrapper"></div>
-    </section>
+        <h1>Contact Us</h1>
+        <div class="wrapper">
+            
+        </div>
+    </section> 
     <!-- Footer -->
-    <Footer>
+    <footer>
         <div class="wrapper">
             <p>Copyright Three Start Media, 2020</p>
             <p>All Images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
         </div>
-    </Footer>
+    </footer>
+    </main>
 </body>
 </html>
