--- a/final-project/index.html
+++ b/final-project/index.html
@@ -11,87 +11,177 @@
 <body>
     <!-- Header -->
     <header class="site-header">
-    <div class="wrapper">
-    <!-- Navigation Bar-->
-    <nav>
-        <div class="navLogo">
-            <img src="images/images/logo.png" alt="logo">
+        <div class="wrapper">
+            <!-- Navigation Bar-->
+            <nav>
+                <div class="navLogo">
+                    <img src="images/images/logo.png" alt="logo">
+                </div>
+                <!-- Navbar Pages -->
+                <ul>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About-us">About Us</a></li>
+                    <li><a href="#Services">Services</a></li>
+                    <li><a href="#Team">Team</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                </ul>
+                <!-- Other Nav Options -->
+                <!-- 
+                <div class="nav-pages">
+                    <div class="home">
+                        <a href="#Home">Home</a>
+                    </div>
+                    <div class="about-us">
+                        <a href="#About-us">About Us</a>
+                    </div>
+                    <div class="services">
+                        <a href="#Services">Services</a>
+                    </div>
+                    <div class="team">
+                        <a href="#Team">Team</a>
+                    </div>
+                    <div class="contact">
+                        <a href="#Contact">Contact</a>
+                    </div>
+                </div> 
+                -->
+                <!-- Search Bar -->
+                <form action="#">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+            </nav>
         </div>
-        <!-- Navbar Pages -->
-        <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#About-us">About Us</a></li>
-            <li><a href="#Services">Services</a></li>
-            <li><a href="#Team">Team</a></li>
-            <li><a href="#Contact">Contact</a></li>
-        </ul>
-        <!-- Other Nav Options -->
-        <!-- 
-        <div class="nav-pages">
-            <div class="home">
-                <a href="#Home">Home</a>
+        <!-- TSM Banner -->
+        <div class="wrapper">
+            <h1>Welcome to Three Star Media</h1>
+            <p></p>
+            <div class="connect-button">
+                <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
             </div>
-            <div class="about-us">
-                <a href="#About-us">About Us</a>
-            </div>
-            <div class="services">
-                <a href="#Services">Services</a>
-            </div>
-            <div class="team">
-                <a href="#Team">Team</a>
-            </div>
-            <div class="contact">
-                <a href="#Contact">Contact</a>
-            </div>
-        </div> 
-        -->
-        <!-- Search Bar -->
-        <form action="#">
-             <input type="text" placeholder="Search" name="search">
-             <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form>
-    </nav>
-    </div>
+        </div>  
     </header>
-    <main>
-     <!--Header End  -->
-    <section class="about-us">
-        <div class="wrapper">
-            <h1>About Us</h1>
-        </div>
-    </section>
-    <!-- Services Content -->
-    <section class="services">
-        <div class="wrapper">
-            <h1>Services</h1>
-        </div>
-    </section>
-    <!-- Our Vision Section -->
-    <section class="our-vision">
-        <div class="wrapper">
-            <h2>Our Vision</h2>
-        </div>
-    </section>
-    <!-- Our Team Section -->
-    <section>
-        <div class="wrapper">
-            <h1>Our Team</h1>
-        </div>
-    </section>
-    <!-- Contact Us -->
-    <section>
-        <h1>Contact Us</h1>
-        <div class="wrapper">
-            
-        </div>
-    </section> 
-    <!-- Footer -->
-    <footer>
-        <div class="wrapper">
-            <p>Copyright Three Start Media, 2020</p>
-            <p>All Images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
-        </div>
-    </footer>
-    </main>
+    <div class="site-content">
+        <main>
+        <!--Header End  -->
+        <section class="about-us">
+            <div class="wrapper">
+                <h1>About Us</h1>
+                <img src="images/about-us.jpg" alt="about-us">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur architecto quasi ex ad at voluptatibus, fugit exercitationem expedita tenetur quas! Similique quos a iure neque minus voluptas magnam hic iste?</p>
+            </div>
+        </section>
+        <!-- Services Content -->
+        <section class="services">
+            <div class="wrapper">
+                <h1>Services</h1>
+                <div class="service1">
+                    <img src="/images/digital.jpg" alt="digital">
+                    <h2>Digital Transformation</h2>
+                    <div class="service-button">
+                        <a href="#digital-plans">Digital Plans<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                </div>
+                <div class="service2">
+                    <img src="/images/marketing.jpg" alt="marketing">
+                    <h2>Marketing</h2>
+                    <div class="service-button">
+                        <a href="#marketing">Marketing<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                </div>
+                <div class="service3">
+                    <img src="/images/video.jpg" alt="video">
+                    <h2>Video Production</h2>
+                    <div class="service-button">
+                        <a href="#video-prod">Video Production<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                </div>
+                <div class="service4">
+                    <img src="/images/web.jpg" alt="web">
+                    <h2>Web Developement</h2>
+                    <div class="service-button">
+                        <a href="#web-dev">Web Developement<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                </div>
+                <div class="service5">
+                    <img src="/images/print.jpg" alt="">
+                    <h2>Print</h2>
+                    <div class="service-button">
+                        <a href="#print">Print<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Vision Section -->
+        <section class="our-vision">
+            <div class="wrapper">
+                <h2>Our Vision</h2>
+                <div class="vision-button">
+                    <a href="#learn-more">Learn More<i class="fa-solid fa-caret-right"></i></a>
+                </div>
+                <img src="/images/vision.jpg" alt="vision">
+            </div>
+        </section>
+        <!-- Our Team Section -->
+        <section>
+            <div class="wrapper">
+                <h1>Our Team</h1>
+                <div class="ceo1">
+                    <img src="/images/bob.jpg" alt="">
+                    <div class="ceo1-content">
+                        <h2>Bob Rite</h2>
+                        <h6>CFO and Co-owner</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
+                    </div>
+                </div>
+                <div class="ceo2">
+                    <img src="/images/john.jpg" alt="">
+                    <div class="ceo2-content">
+                        <h2>John Doe</h2>
+                        <h6>CEO and Co-owner</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Us -->
+        <section>
+            <div class="wrapper">
+                <h1>Contact Us</h1>
+                <div class="message">
+                    <h2>Send us a message</h2>
+                </div>
+                <div class="location">
+                    <h2>location</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045636!2d-75.75712548379654!3d45.349931549080814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649041435460!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="operation">
+                    <h2>Hours of operation</h2>
+                    <table>
+                        <tr>
+                            <th>Days</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Monday-Friday</td>
+                            <td>Saturday-Sunday</td>
+                        </tr>
+                        <tr>
+                            <td>9 AM - 6 PM</td>
+                            <td>Closed</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </section> 
+        <!-- Footer -->
+        <footer>
+            <div class="wrapper">
+                <p>Copyright Three Start Media, 2020</p>
+                <p>All Images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
+            </div>
+        </footer>
+        </main>
+    </div>
 </body>
 </html>
