temporary nav needs to polish on hover and search

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,52 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d68799586b.js" crossorigin="anonymous"></script>
     <title>MTM6130 Final Project - Roniel Rivera</title>
-    <!-- <link rel="stylesheet" href="/final-project/css/main.css"> -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!-- Header -->
     <header class="site-header">
-        <div class="wrapper">
-            <!-- Navigation Bar-->
-            <nav>
-                <div class="navLogo">
-                    <img src="images/images/logo.png" alt="logo">
+        <!-- Navigation Bar-->
+        <nav>
+            <div class="wrapper">
+            <!-- Navbar Pages -->
+                <div class="navPages">
+                    <div class="navLogo">
+                        <img src="images/logo.png" alt="logo">
+                    </div>
+                    <ul>
+                        <li><a href="#Home">Home</a></li>
+                        <li><a href="#About-us">About Us</a></li>
+                        <li><a href="#Services">Services</a></li>
+                        <li><a href="#Team">Team</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                    </ul>
+                    <!-- Search Bar -->
+                    <form action="#">
+                        <input type="text" placeholder="Search" name="search">
+                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
                 </div>
-                <!-- Navbar Pages -->
-                <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#About-us">About Us</a></li>
-                    <li><a href="#Services">Services</a></li>
-                    <li><a href="#Team">Team</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                </ul>
-                <!-- Other Nav Options -->
-                <!-- 
-                <div class="nav-pages">
-                    <div class="home">
-                        <a href="#Home">Home</a>
-                    </div>
-                    <div class="about-us">
-                        <a href="#About-us">About Us</a>
-                    </div>
-                    <div class="services">
-                        <a href="#Services">Services</a>
-                    </div>
-                    <div class="team">
-                        <a href="#Team">Team</a>
-                    </div>
-                    <div class="contact">
-                        <a href="#Contact">Contact</a>
-                    </div>
-                </div> 
-                -->
-                <!-- Search Bar -->
-                <form action="#">
-                    <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                </form>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <!-- TSM Banner -->
         <div class="wrapper">
             <h1>Welcome to Three Star Media</h1>
