navigation bar finished. used fiv instead of list for nav

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -19,13 +19,21 @@
                     <div class="navLogo">
                         <img src="images/logo.png" alt="logo">
                     </div>
-                    <ul>
-                        <li><a href="#Home">Home</a></li>
-                        <li><a href="#About-us">About Us</a></li>
-                        <li><a href="#Services">Services</a></li>
-                        <li><a href="#Team">Team</a></li>
-                        <li><a href="#Contact">Contact</a></li>
-                    </ul>
+                    <div class="page">
+                        <a href="#home">Home</a>
+                    </div>
+                    <div class="page">
+                        <a href="#About-Us">About Us</a>
+                    </div>
+                    <div class="page">
+                        <a href="#Services">Services</a>
+                    </div>
+                    <div class="page">
+                        <a href="#Team">Team</a>
+                    </div>
+                    <div class="page">
+                        <a href="#Contact">Contact</a>
+                    </div>
                     <!-- Search Bar -->
                     <form action="#">
                         <input type="text" placeholder="Search" name="search">
