conents for banner added

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -43,13 +43,18 @@
             </div>
         </nav>
         <!-- TSM Banner -->
-        <div class="wrapper">
-            <h1>Welcome to Three Star Media</h1>
-            <p></p>
-            <div class="connect-button">
-                <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
+        <section>
+            <div class="wrapper">
+            <div class="banner-frame">
+                <h1>Welcome to Three Star Media</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas autem aut ad velit reprehenderit quis corporis, in doloremque corrupti necessitatibus consequatur!</p>
+                <div class="connect-button">
+                    <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
+                </div>
             </div>
-        </div>  
+            </div>
+            <img src="images/main-banner.jpg" alt="main-banner"> 
+        </section>
     </header>
     <div class="site-content">
         <main>
