changed banner frame to banner content

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="site-header">
+    <header>
         <!-- Navigation Bar-->
         <nav>
             <div class="wrapper">
@@ -45,13 +45,13 @@
         <!-- TSM Banner -->
         <section>
             <div class="wrapper">
-            <div class="banner-frame">
-                <h1>Welcome to Three Star Media</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas autem aut ad velit reprehenderit quis corporis, in doloremque corrupti necessitatibus consequatur!</p>
-                <div class="connect-button">
-                    <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
+                <div class="banner-content">
+                    <h1>Welcome to Three Star Media</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas autem aut ad velit reprehenderit quis corporis, in doloremque corrupti necessitatibus consequatur!</p>
+                    <div class="connect-button">
+                        <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
                 </div>
-            </div>
             </div>
             <img src="images/main-banner.jpg" alt="main-banner"> 
         </section>
