--- a/final-project/index.html
+++ b/final-project/index.html
@@ -43,7 +43,7 @@
             </div>
         </nav>
         <!-- TSM Banner -->
-        <section>
+        <section class="site-banner">
             <div class="wrapper">
                 <div class="banner-content">
                     <h1>Welcome to Three Star Media</h1>
@@ -58,116 +58,121 @@
     </header>
     <div class="site-content">
         <main>
-        <!--Header End  -->
-        <section class="about-us">
-            <div class="wrapper">
-                <h1>About Us</h1>
-                <img src="images/about-us.jpg" alt="about-us">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur architecto quasi ex ad at voluptatibus, fugit exercitationem expedita tenetur quas! Similique quos a iure neque minus voluptas magnam hic iste?</p>
-            </div>
-        </section>
-        <!-- Services Content -->
-        <section class="services">
-            <div class="wrapper">
-                <h1>Services</h1>
-                <div class="service1">
-                    <img src="/images/digital.jpg" alt="digital">
-                    <h2>Digital Transformation</h2>
-                    <div class="service-button">
-                        <a href="#digital-plans">Digital Plans<i class="fa-solid fa-caret-right"></i></a>
+            <!--Header End  -->
+            <section class="about-us">
+                <div class="wrapper">
+                    <img src="images/about-us.jpg" alt="about-us">
+                    <h1>About Us</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur architecto quasi ex ad at voluptatibus, fugit exercitationem expedita tenetur quas! Similique quos a iure neque minus voluptas magnam hic iste?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem asperiores debitis dolores quam ullam repudiandae adipisci repellendus molestiae eveniet nobis voluptatibus, aspernatur, obcaecati culpa perferendis modi ipsam sapiente dicta. Exercitationem?
+                    </p>
+                </div>
+            </section>
+            <!-- Services Content -->
+            <section class="services">
+                <div class="wrapper">
+                    <h1>Services</h1>
+                    <div class="service1">
+                        <img src="/images/digital.jpg" alt="digital">
+                        <h2>Digital Transformation</h2>
+                        <div class="service-button">
+                            <a href="#digital-plans">Digital Plans<i class="fa-solid fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="service2">
+                        <img src="/images/marketing.jpg" alt="marketing">
+                        <h2>Marketing</h2>
+                        <div class="service-button">
+                            <a href="#marketing">Marketing<i class="fa-solid fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="service3">
+                        <img src="/images/video.jpg" alt="video">
+                        <h2>Video Production</h2>
+                        <div class="service-button">
+                            <a href="#video-prod">Video Production<i class="fa-solid fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="service4">
+                        <img src="/images/web.jpg" alt="web">
+                        <h2>Web Developement</h2>
+                        <div class="service-button">
+                            <a href="#web-dev">Web Developement<i class="fa-solid fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="service5">
+                        <img src="/images/print.jpg" alt="">
+                        <h2>Print</h2>
+                        <div class="service-button">
+                            <a href="#print">Print<i class="fa-solid fa-caret-right"></i></a>
+                        </div>
                     </div>
                 </div>
-                <div class="service2">
-                    <img src="/images/marketing.jpg" alt="marketing">
-                    <h2>Marketing</h2>
-                    <div class="service-button">
-                        <a href="#marketing">Marketing<i class="fa-solid fa-caret-right"></i></a>
+            </section>
+            <!-- Our Vision Section -->
+            <section class="our-vision">
+                <div class="wrapper">
+                    <h2>Our Vision</h2>
+                    <div class="vision-button">
+                        <a href="#learn-more">Learn More<i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                    <img src="/images/vision.jpg" alt="vision">
+                </div>
+            </section>
+            <!-- Our Team Section -->
+            <section>
+                <div class="wrapper">
+                    <h1>Our Team</h1>
+                    <div class="ceo2">
+                        <img src="/images/john.jpg" alt="">
+                        <div class="ceo2-content">
+                            <h2>John Doe</h2>
+                            <h6>CEO and Co-owner</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="service3">
-                    <img src="/images/video.jpg" alt="video">
-                    <h2>Video Production</h2>
-                    <div class="service-button">
-                        <a href="#video-prod">Video Production<i class="fa-solid fa-caret-right"></i></a>
+            </section>
+            <!-- Contact Us -->
+            <section>
+                <div class="wrapper">
+                    <h1>Contact Us</h1>
+                    <div class="message">
+                        <h2>Send us a message</h2>
+                    </div>
+                    <div class="location">
+                        <h2>location</h2>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045636!2d-75.75712548379654!3d45.349931549080814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649041435460!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="operation">
+                        <h2>Hours of operation</h2>
+                        <table>
+                            <tr>
+                                <th>Days</th>
+                                <th>Hours</th>
+                            </tr>
+                            <tr>
+                                <td>Monday-Friday</td>
+                                <td>Saturday-Sunday</td>
+                            </tr>
+                            <tr>
+                                <td>9 AM - 6 PM</td>
+                                <td>Closed</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
-                <div class="service4">
-                    <img src="/images/web.jpg" alt="web">
-                    <h2>Web Developement</h2>
-                    <div class="service-button">
-                        <a href="#web-dev">Web Developement<i class="fa-solid fa-caret-right"></i></a>
-                    </div>
+            </section> 
+            <!-- Footer -->
+            <footer>
+                <div class="wrapper">
+                    <p>Copyright Three Start Media, 2020</p>
+                    <p>All Images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
                 </div>
-                <div class="service5">
-                    <img src="/images/print.jpg" alt="">
-                    <h2>Print</h2>
-                    <div class="service-button">
-                        <a href="#print">Print<i class="fa-solid fa-caret-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Our Vision Section -->
-        <section class="our-vision">
-            <div class="wrapper">
-                <h2>Our Vision</h2>
-                <div class="vision-button">
-                    <a href="#learn-more">Learn More<i class="fa-solid fa-caret-right"></i></a>
-                </div>
-                <img src="/images/vision.jpg" alt="vision">
-            </div>
-        </section>
-        <!-- Our Team Section -->
-        <section>
-            <div class="wrapper">
-                <h1>Our Team</h1>
-                <div class="ceo2">
-                    <img src="/images/john.jpg" alt="">
-                    <div class="ceo2-content">
-                        <h2>John Doe</h2>
-                        <h6>CEO and Co-owner</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Contact Us -->
-        <section>
-            <div class="wrapper">
-                <h1>Contact Us</h1>
-                <div class="message">
-                    <h2>Send us a message</h2>
-                </div>
-                <div class="location">
-                    <h2>location</h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045636!2d-75.75712548379654!3d45.349931549080814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649041435460!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="operation">
-                    <h2>Hours of operation</h2>
-                    <table>
-                        <tr>
-                            <th>Days</th>
-                            <th>Hours</th>
-                        </tr>
-                        <tr>
-                            <td>Monday-Friday</td>
-                            <td>Saturday-Sunday</td>
-                        </tr>
-                        <tr>
-                            <td>9 AM - 6 PM</td>
-                            <td>Closed</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </section> 
-        <!-- Footer -->
-        <footer>
-            <div class="wrapper">
-                <p>Copyright Three Start Media, 2020</p>
-                <p>All Images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
-            </div>
-        </footer>
+            </footer>
         </main>
     </div>
 </body>
