added contents in html services

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -74,38 +74,58 @@
             <!-- Services Content -->
             <section class="services">
                 <div class="wrapper">
+                    <!-- Digital Transformation -->
                     <h1>Services</h1>
                     <div class="service1">
                         <img src="/images/digital.jpg" alt="digital">
                         <h2>Digital Transformation</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum facere dicta adipisci nesciunt quidem hic vel odio accusantium doloremque ratione? Unde alias consequatur vitae enim magni beatae officia fugit eveniet.
+                        </p>
                         <div class="service-button">
                             <a href="#digital-plans">Digital Plans<i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
+                    <!-- Marketing -->
                     <div class="service2">
                         <img src="/images/marketing.jpg" alt="marketing">
                         <h2>Marketing</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, animi ea omnis sed praesentium maxime doloremque beatae distinctio sint officiis sit? Quae officia fugit debitis, illo nam aperiam blanditiis?
+                        </p>
                         <div class="service-button">
                             <a href="#marketing">Marketing<i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
+                    <!-- Video Production -->
                     <div class="service3">
                         <img src="/images/video.jpg" alt="video">
                         <h2>Video Production</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus necessitatibus ipsam laudantium ullam atque sequi mollitia aliquid similique nam? Deleniti in aperiam minus? Repudiandae aliquid molestias eos, adipisci quia in!
+                        </p>
                         <div class="service-button">
                             <a href="#video-prod">Video Production<i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
+                    <!-- Web Developement -->
                     <div class="service4">
                         <img src="/images/web.jpg" alt="web">
                         <h2>Web Developement</h2>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit fugiat ad quasi deleniti vitae iste deserunt, architecto sed explicabo assumenda ex odit, et officiis possimus recusandae iusto nisi! Laboriosam, culpa!
+                        </p>
                         <div class="service-button">
                             <a href="#web-dev">Web Developement<i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
+                    <!-- Print -->
                     <div class="service5">
                         <img src="/images/print.jpg" alt="">
                         <h2>Print</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tenetur ut, dolorum distinctio iste asperiores fugit, perferendis est ipsum deleniti magnam ea itaque enim nesciunt exercitationem a, blanditiis quo expedita.
+                        </p>
                         <div class="service-button">
                             <a href="#print">Print<i class="fa-solid fa-caret-right"></i></a>
                         </div>
