class services 1-4 change to just service

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -76,7 +76,7 @@
                 <div class="wrapper">
                     <!-- Digital Transformation -->
                     <h1>Services</h1>
-                    <div class="service1">
+                    <div class="service">
                         <img src="/images/digital.jpg" alt="digital">
                         <h2>Digital Transformation</h2>
                         <p>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <!-- Marketing -->
-                    <div class="service2">
+                    <div class="service">
                         <img src="/images/marketing.jpg" alt="marketing">
                         <h2>Marketing</h2>
                         <p>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <!-- Video Production -->
-                    <div class="service3">
+                    <div class="service">
                         <img src="/images/video.jpg" alt="video">
                         <h2>Video Production</h2>
                         <p>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <!-- Web Developement -->
-                    <div class="service4">
+                    <div class="service">
                         <img src="/images/web.jpg" alt="web">
                         <h2>Web Developement</h2>
                         <p>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <!-- Print -->
-                    <div class="service5">
+                    <div class="service">
                         <img src="/images/print.jpg" alt="">
                         <h2>Print</h2>
                         <p>
