changes in html "our vision: section

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -141,8 +141,14 @@
                     <div class="vision-button">
                         <a href="#learn-more">Learn More<i class="fa-solid fa-caret-right"></i></a>
                     </div>
-                    <img src="/images/vision.jpg" alt="vision">
+                    <!-- Div will rename later -->
+                    <div class="description">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptates velit facilis temporibus eum cum ea repudiandae nostrum impedit quam cupiditate, libero modi a explicabo? Ad earum maxime iusto doloribus.
+                        </p>
+                    </div>
                 </div>
+                <img src="/images/vision.jpg" alt="vision">
             </section>
             <!-- Our Team Section -->
             <section class="our-team">
