Team Section stylized

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -157,8 +157,8 @@
                     <div class="ceo">
                         <img src="/images/john.jpg" alt="">
                         <div class="ceo-content">
-                            <h2>John Doe</h2>
-                            <h6>CEO and Co-owner</h6>
+                            <h1>John Doe</h1>
+                            <h3>CEO and Co-owner</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
                         </div>
                     </div>
@@ -169,8 +169,8 @@
                     <div class="ceo">
                         <img src="/images/bob.jpg" alt="">
                         <div class="ceo-content">
-                            <h2>Bob Rite</h2>
-                            <h6>CEO and Co-owner</h6>
+                            <h1>Bob Rite</h1>
+                            <h3>CFO and Co-owner</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
                         </div>
                     </div>
