--- a/final-project/index.html
+++ b/final-project/index.html
@@ -191,7 +191,7 @@
                             <input id="email" name="email" style="height: 30px;">
                         </form>
                         <form action="#">
-                            <label for="Message">Message</label>
+                            <label>Message</label>
                             <textarea name="message" id="message" style="height: 200px;"></textarea>
                         </form>
                         <div class="send">
