minor html changes and vision section stylized

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -137,21 +137,22 @@
             <!-- Our Vision Section -->
             <section class="our-vision">
                 <div class="wrapper">
-                    <h2>Our Vision</h2>
-                    <div class="vision-button">
-                        <a href="#learn-more">Learn More<i class="fa-solid fa-caret-right"></i></a>
-                    </div>
+                    
                     <!-- Div will rename later -->
                     <div class="description">
+                        <h2>Our Vision</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptates velit facilis temporibus eum cum ea repudiandae nostrum impedit quam cupiditate, libero modi a explicabo? Ad earum maxime iusto doloribus.
                         </p>
+                        <div class="vision-button">
+                            <a href="#learn-more">Learn More <i class="fa-solid fa-caret-right"></i></a>
+                        </div>
                     </div>
                 </div>
-                <img src="/images/vision.jpg" alt="vision">
+                <!-- <img src="/images/vision.jpg" alt="vision"> -->
             </section>
             <!-- Our Team Section -->
-            <section class="our-team">
+            <section>
                 <div class="wrapper">
                     <h1>Our Team</h1>
                     <div class="ceo">
