minor html comments and removed old banner and services contents

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -149,6 +149,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- img tag removed -->
                 <!-- <img src="/images/vision.jpg" alt="vision"> -->
             </section>
             <!-- Our Team Section -->
