about us stylized

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -51,11 +51,11 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas autem aut ad velit reprehenderit quis corporis, in doloremque corrupti necessitatibus consequatur!</p>    
                     </div>
                     <div class="connect-button">
-                        <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#connect">Connect with us <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
-            <img src="images/main-banner.jpg" alt="main-banner"> 
+            <!-- <img src="images/main-banner.jpg" alt="main-banner">  -->
         </section>
     </header>
     <div class="site-content">
